--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "firebase": "^5.9.1",
     "node-sass": "^4.11.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
@@ -16,7 +19,8 @@
     "recompose": "^0.30.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
